--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,5 @@
-# this_file: twat_video/pyproject.toml
-
-# this_file: twat_video/pyproject.toml
+# this_file: pyproject.toml
+# this_project: twat_video
 
 # Build System Configuration
 # -------------------------
@@ -142,9 +141,18 @@ lint.ignore = [
     "I001",
 ]
 
+[tool.ruff.lint.isort]
+known-first-party = ["twat_video"]
 
-[tool.ruff.per-file-ignores]
-"tests/*" = ["S101"]
+[tool.ruff.lint.flake8-tidy-imports]
+ban-relative-imports = "all"
+
+[tool.ruff.lint.per-file-ignores]
+"tests/**/*" = [
+    "PLR2004",  # Allow magic values in tests for readability
+    "S101",     # Allow assertions in tests
+    "TID252"    # Allow relative imports in tests for convenience
+]
 
 
 [tool.mypy]
@@ -233,4 +241,4 @@ compare = [
     "iqr",    # Inter-quartile range
     "ops",    # Operations per second
     "rounds", # Number of rounds
-] 
+]
